--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home</title>
+		<title>Updated Page Title</title>
 		<link rel="stylesheet" href="./style/style.css"/>
 	</head>
 	<body>
